# pybg3

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  pyproject.toml  test.ipynb  test.py
scripts/: bk_trace.lldb  bk_trace.py  bk_trace.sh
src/: pybg3.cc  pybg3_granny.cc  pybg3_granny.h  pybg3_granny_test.cc  rans.h  rans_test.cc
src/pybg3/: __init__.py  lsf.py  osiris.py  pak.py
