[project]
name = "pybg3"
version = "0.1.0"
description = "python bg3 utilities based on libbg3"
authors = [ {name = "Mackenzie Straight", email = "mack@str.rs"}, ]
requires-python = ">= 3.11"
dependencies = [
  "sexpdata",
  "usd-core>=24.5",
]

[build-system]
requires = ["scikit-build-core>=0.3.3", "pybind11"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
build-dir = "build"

[tool.scikit-build.cmake.define]
CMAKE_EXPORT_COMPILE_COMMANDS = "ON"

[tool.ruff]
line-length = 90
